# xano-local-mcp

./: README.md  README_SDK.md  claude_desktop_config.json  pyproject.toml  run_xano_mcp.sh  xano_mcp_sdk.py
